# pastebin/users/schemas.py
@@ -2,18 +2,17 @@ from datetime import datetime
 
 from marshmallow import Schema, fields, validate, validates_schema, ValidationError, post_load
 
-from pastebin.mixins import ErrorSchemaMixin
+from pastebin.mixins import SchemaMixin
 from .models import User
 
 
-class DefaultUserSchema(ErrorSchemaMixin, Schema):
+class DefaultUserSchema(SchemaMixin, Schema):
     id = fields.Integer(required=True, dump_only=True)
     first_name = fields.String(required=True, validate=validate.Length(min=2, max=100))
     last_name = fields.String(required=True, validate=validate.Length(min=2, max=100))
     pseudo = fields.String(required=True, validate=validate.Length(min=2, max=100))
     email = fields.Email(required=True)
     password = fields.String(required=True, load_only=True, validate=validate.Length(min=4, max=100))
-    created_at = fields.DateTime(required=True, dump_only=True)
 
     @post_load()
     def get_user(self, data: dict, **_) -> User:
@@ -24,14 +23,13 @@ class DefaultUserSchema(ErrorSchemaMixin, Schema):
 
 
 # the difference here is that no field is required but there must be at least one field in the payload
-class PatchUserSchema(ErrorSchemaMixin, Schema):
+class PatchUserSchema(SchemaMixin, Schema):
     id = fields.Integer(dump_only=True)
     first_name = fields.String(validate=validate.Length(min=2, max=100))
     last_name = fields.String(validate=validate.Length(min=2, max=100))
     pseudo = fields.String(validate=validate.Length(min=2, max=100))
     email = fields.Email()
     password = fields.String(load_only=True, validate=validate.Length(min=4, max=100))
-    created_at = fields.DateTime(dump_only=True)
 
     @validates_schema()
     def validate_non_empty_payload(self, data: dict, **_) -> None:
